--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/screen-orientation": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/vibration": "^4.3.3",
     "@ionic/storage": "2.0.1",
     "cordova-plugin-ionic": "^2.0.3",
+    "cordova-plugin-screen-orientation": "^2.0.1",
+    "cordova-plugin-vibration": "^2.1.5",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
@@ -42,7 +46,9 @@
         "APP_ID": "c4753032",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "background"
-      }
+      },
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-screen-orientation": {}
     }
   }
 }
