--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic-native/vibration": "^4.3.3",
     "@ionic/storage": "2.0.1",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic": "^2.0.3",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-screen-orientation": "^2.0.1",
+    "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-vibration": "^2.1.5",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "es6-promise-plugin": "git+https://github.com/vstirbu/PromisesPlugin.git",
     "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -48,7 +56,15 @@
         "UPDATE_METHOD": "background"
       },
       "cordova-plugin-vibration": {},
-      "cordova-plugin-screen-orientation": {}
-    }
+      "cordova-plugin-screen-orientation": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
