--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/barcode-scanner": "^4.4.2",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/screen-orientation": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.2",
@@ -39,6 +40,7 @@
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "^7.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
